# LLM-Guardrails

./: README.md  ROADMAP.md  pyproject.toml  requirements.txt
api/: app.py  schemas.py
api/routes/: health.py  scan.py
docs/: architecture.md  configuration.md
examples/: api_client.py  basic_scan.py  custom_policy.py
guardrails/: __init__.py  injection_detector.py  jailbreak_detector.py  models.py  pii_detector.py  policy_enforcer.py
tests/: conftest.py  test_api.py  test_injection_detector.py  test_jailbreak_detector.py  test_pii_detector.py  test_policy_enforcer.py
